XFIRE-610: Use Resolver in ServiceBean
Also added better support for WebApplicationContexts. We now provide a web 
application context from the servlet, which helps things that implement
ServletContextAware.

git-svn-id: http://svn.codehaus.org/xfire/trunk/xfire@1885 c7d0bf07-ec0d-0410-b2cc-d48fa9be22ba